--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install
-    npm run build
-    npm test
+    call npm install
+    call npm run build
+    call npm test
   displayName: 'npm install and build and test'
